更新部分maven插件和编译运行参数的内容